# find_api_key

./: .gitignore  README.md  find_api_key.py  patterns.toml  patterns.yaml  pyproject.toml
modules/: api_key_finder.py  file_checker.py  pattern_seeker.py
